<resources>
    <string name="app_name">Wechart</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_first_screen_title">Text your friends and share moments</string>
    <string name="txt_first_screen_body">End-to-end secured messaging app with Social Elements</string>
    <string name="txt_login">Login</string>
    <string name="txt_enter_your_password">Enter Your Password</string>
    <string name="txt_enter_your_phone_number">Enter Your Phone Number</string>
    <string name="txt_welcome">Welcome!</string>
    <string name="txt_hi">Hi !</string>
    <string name="txt_body">Create a new account</string>
    <string name="txt_verify">Verify</string>
    <string name="txt_first_otp">1</string>
    <string name="txt_second_otp">1</string>
    <string name="txt_third_otp">1</string>
    <string name="txt_fourth_otp">1</string>
    <string name="txt_male">Male</string>
    <string name="txt_female">Female</string>
    <string name="txt_other">Other</string>
    <string name="txt_name">Name</string>
    <string name="txt_date_of_birth">Date of Birth</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_moments">Moments</string>
    <string name="txt_moment_menu">Moment</string>
    <string name="txt_chat_menu">Chat</string>
    <string name="txt_contacts_menu">Contacts</string>
    <string name="txt_me_menu">Me</string>
    <string name="txt_setting_menu">setting</string>

    <string-array name="months">
        <item>Month</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_profile_name">Michael</string>
    <string name="txt_deactived_time">15 min ago</string>
    <string name="txt_nice">Nice!</string>
    <string name="txt_count">10</string>
    <string name="txt_new_moment">New Moment</string>
    <string name="txt_create">Create</string>
    <string name="txt_hint_new_moment">What\'s on your mind</string>
    <string name="txt_search">Search</string>
    <string name="txt_add_new">Add New</string>
    <string name="txt_contact_name">Than Hteik Aung</string>
    <string name="txt_title_new_gp">Group Name</string>
    <string name="txt_last_chat_date_time">12/2/2022</string>
    <string name="txt_me_name">Than htike Aung</string>
    <string name="txt_online">Online</string>
    <string name="txt_chat_room_name">Than Hteik Aung</string>
    <string name="txt_hint_type_a_message">Type a message</string>
    <string name="title_picture">picture</string>
    <string name="title_camera">Camera</string>
    <string name="title_gif">Gif</string>
    <string name="title_location">Location</string>
    <string name="title_mic">Mic</string>

</resources>