<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuItemImage"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_image_blue_gray_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/title_picture" />
    <item
        android:id="@+id/menuItemCammera"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_camera_alt_gray_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/title_camera" />
    <item
        android:id="@+id/menuItemGif"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_gif_box_gray_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/title_gif" />
    <item
        android:id="@+id/menuItemLocation"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_location_on_gray_24dp"
        app:showAsAction="ifRoom|withText"
        android:title="@string/title_location" />
    <item
        android:id="@+id/menuItemMic"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_mic_gray_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/title_mic" />
</menu>