<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/momentMenu"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_camera_dark_light_24dp"
        android:title="@string/txt_moment_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/chatMenu"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_chat_dark_light_24"
        android:title="@string/txt_chat_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/contactsMenu"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_perm_contact_calendar_dark_light_24dp"
        android:title="@string/txt_contacts_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/meAccMenu"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_circle_dark_light_24dp"
        android:title="@string/txt_me_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settingMenu"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_menu_dark_light_24dp"
        android:title="@string/txt_setting_menu"
        app:showAsAction="ifRoom" />

</menu>